@@ -1,110 +1,0 @@
-<?php
-/*
- * ZenMagick - Extensions for zen-cart
- * Copyright (C) 2006-2009 ZenMagick
- *
- * Portions Copyright (c) 2003 The zen-cart developers
- * Portions Copyright (c) 2003 osCommerce
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or (at
- * your option) any later version.
- *
- * This program is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
- */
-?>
-<?php
-
-/**
- * Init plugin to set up the requests 'cPath' value if missing.
- *
- * @package org.zenmagick.plugins.init
- * @author DerManoMann
- * @version $Id$
- */
-class zm_init_category_path extends Plugin implements ZMRequestHandler {
-
-    /**
-     * Create new instance.
-     */
-    function __construct() {
-        parent::__construct('Category Path', 'Set the default category path if none exists');
-        $this->setScope(Plugin::SCOPE_STORE);
-        $this->setPreferredSortOrder(40);
-    }
-
-    /**
-     * Destruct instance.
-     */
-    function __destruct() {
-        parent::__destruct();
-    }
-
-
-    /**
-     * {@inheritDoc}
-     */
-    public function install() {
-        parent::install();
-        $this->addConfigValue('Verify Path', 'verifyPath', 'false', 'Verify (and fix) the cPath value given',
-            'widget@BooleanFormWidget#name=verifyPath&default=false&label=Verify');
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    public function initRequest($request) {
-        if (0 != ($productId = $request->getProductId())) {
-            if (null == $request->getCategoryPath()) {
-                // set default based on product default category
-                if (null != ($product = ZMProducts::instance()->getProductForId($productId))) {
-                    $defaultCategory = $product->getDefaultCategory();
-                    if (null != $defaultCategory) {
-                        $request->setCategoryPathArray($defaultCategory->getPathArray());
-                    }
-                }
-            }
-        }
-
-        if (ZMLangUtils::asBoolean($this->get('verifyPath'))) {
-            if (null != $request->getCategoryPath()) {
-                $path = array_reverse($request->getCategoryPathArray());
-                $last = count($path) - 1;
-                $valid = true;
-                foreach ($path as $ii => $categoryId) {
-                    $category = ZMCategories::instance()->getCategoryForId($categoryId);
-                    if ($ii < $last) {
-                        if (null == ($parent = $category->getParent())) {
-                            // can't have top level category in the middle
-                            $valid = false;
-                            break;
-                        } else if ($parent->getId() != $path[$ii+1]) {
-                            // not my parent!
-                            $valid = false;
-                            break;
-                        }
-                    } else if (null != $category->getParent()) {
-                        // must start with a root category
-                        $valid = false;
-                        break;
-                    }
-                }
-                if (!$valid) {
-                    $category = ZMCategories::instance()->getCategoryForId(array_pop($request->getCategoryPathArray()));
-                    $request->setCategoryPathArray($category->getPathArray());
-                }
-            }
-        }
-    }
-
-}
-
-?>
